realizando quinto requisito

--- a/fundamentos/secao-5-javascript-dom-eventos-e-web-storage/dia-1-javascript-dom-e-seletores/dom-e-seletores.html
+++ b/fundamentos/secao-5-javascript-dom-eventos-e-web-storage/dia-1-javascript-dom-e-seletores/dom-e-seletores.html
@@ -66,6 +66,13 @@
       }
       changeH1();
 
+      const paragraphUpperCase = () => {
+        let upperText = document.getElementsByTagName('p')[0];
+        upperText.style.textTransform = 'uppercase';
+      }
+      paragraphUpperCase();
+
+
     </script>
   </body>
 </html>
