realizando sexto requisito

--- a/fundamentos/secao-5-javascript-dom-eventos-e-web-storage/dia-1-javascript-dom-e-seletores/dom-e-seletores.html
+++ b/fundamentos/secao-5-javascript-dom-eventos-e-web-storage/dia-1-javascript-dom-e-seletores/dom-e-seletores.html
@@ -72,7 +72,14 @@
       }
       paragraphUpperCase();
 
-
+      const showParagraphs = () => {
+        let paragraphs = document.getElementsByTagName('p');
+        for (let index = 0; index < paragraphs.length; index += 1) {
+          console.log(paragraphs[index]);
+        }
+      }
+      showParagraphs();
+      
     </script>
   </body>
 </html>
